# ChangeLog for media-sound/clementine
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*clementine-9999 (11 Jun 2010)

  11 Jun 2010; Nikoli <nikoli@lavabit.com> +clementine-9999.ebuild,
  +metadata.xml:
  Initial live ebuild
