@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 2236 RMD160 0c7d0b7acde34db17771bc5cbc282e4dacb0380e SHA1 db632f22800ac0e21d776063a6c1cf253b88bd68 SHA256 69309e0bbf1d47889eb7061a34f4b5e35e5b50963a4787dab076ba6072f814e0
-MISC ChangeLog 263 RMD160 7b7434aaf0e58aa4c0843746fec053932ff41ad0 SHA1 c84d2002e8a3b785635791022fb30c80e58608d1 SHA256 51b18229b60438ea05bff2b5d9748efa56ceb4676de944f764df4450ae7c8208
+EBUILD clementine-9999.ebuild 2164 RMD160 a670c8354eda82c57d4ab545ba29f1f873fc29aa SHA1 4d8e368d4201f8cf5d579645bbbda79d5724fba8 SHA256 8dbaf3835583c88d4548f94167beac7184f0939dc9453eae70a9d6b87c00f724
+MISC ChangeLog 363 RMD160 3a69039479935fada3a0f8c66f9e54cb93cbc323 SHA1 c1d6b55bdea697e86a00b0e397754a14de54d40f SHA256 67b8e8c1fc44f4ca88748412389185c78617bb31d7bfb532d483e87b4b965fa5
 MISC metadata.xml 366 RMD160 57edb246583996360d3f18a67246f9edf7d4698b SHA1 a0b336051f74e47a50e4978d038e9ebc8a4c55da SHA256 d814214186c00863c84944669888779fd113f4a37692134522b5d289835e9666
