@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jun 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
+  upstream now supports LINGUAS
+
 *clementine-9999 (11 Jun 2010)
 
   11 Jun 2010; Nikoli <nikoli@lavabit.com> +clementine-9999.ebuild,
